# owshen

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  GENESIS.json  Makefile  README.md  owshen_update.txt
.github/workflows/: test.yaml
circuits/: .gitignore  Makefile  owshen.circom
circuits/proof_of_burn_circuits/: mpt_last.circom  mpt_path.circom  spend.circom
circuits/proof_of_burn_circuits/utils/: concat.circom  hashbytes.circom  hasher.circom  padding.circom  rlp.circom  selector.circom  substring_finder.circom  utils.circom
circuits/scripts/: spit_output.py
client/: package-lock.json  package.json  tailwind.config.js
client/html/: index.html
client/js/: helper.js  http.js  walletConnection.js
client/public/: index.html
client/src/: App.js  config.js  index.js
client/src/Routes/: index.js
client/src/common/: poseidon2.evm
client/src/hooks/: useApprove.js
client/src/store/: containerSlice.js  store.js
client/src/styles/: main.css
client/src/utils/: Currencies.js  helper.js  http.js  networkDetails.js  proof.js  walletConnection.js  witness_calc.js
contracts/: .gitignore  Makefile  foundry.toml  remappings.txt
contracts/circuits/: babyjub.circom  coin_send.circom  coin_withdraw.circom  hasher.circom  poseidon.circom  poseidon_constants.circom  reward_withdraw.circom  utils.circom
contracts/script/: Owshen.s.sol  UpgradeOwshen.s.sol
contracts/src/: CheckpointedHashchain.sol  Dive.sol  FMT.sol  IPoseidon.sol  MiMC.sol  Owshen.sol  OwshenV2.sol  RewardWithdrawVerifier.sol  SimpleErc20.sol  SparseMerkleTree.sol  mimc.sol
contracts/test/: MiMC.t.sol  Owshen.t.sol  SparseMerkleTree.t.sol  mimc.t.sol
html/: wallet.html
misc/: Makefile
networks/: Sepolia.json
src/: babyjubjub.rs  checkpointed_hashchain.rs  config.rs  fmt.rs  fp.rs  genesis.rs  hash.rs  helper.rs  keys.rs  main.rs  network.rs  poseidon.rs  poseidon2.rs  proof.rs  safe_signer.rs  tree.rs  utils.rs
src/apis/: coins.rs  info.rs  init.rs  mod.rs  send.rs  set_network.rs  set_params_path.rs  stealth.rs  withdraw.rs
src/apis/node/: events.rs  get_mempool.rs  get_peers.rs  handshake.rs  mod.rs  post_tx.rs  status.rs
src/assets/: mimc7.abi  mimc7.evm  poseidon2.abi  poseidon4.abi  poseidon4.evm
src/blockchain/: config.rs  mod.rs  tests.rs
src/blockchain/ovm/: mod.rs  tests.rs
src/blockchain/tx/: burn_tx.rs  erc20.rs  eth.rs  mint_tx.rs  mod.rs
src/cli/: mod.rs  node.rs
src/client/: BlockDetails.rs  explorer.rs  mod.rs  style.rs
src/client/templates/: block_details.html  explorer.html
src/commands/: burn.rs  claim.rs  deploy.rs  dive.rs  info.rs  init.rs  mint.rs  mod.rs  node.rs  participate.rs  spend.rs  utils.rs  wallet.rs
src/db/: disk.rs  key.rs  mirror.rs  mod.rs  ram.rs  value.rs
src/genesis/: genesis_data.rs  mod.rs
src/html/: poseidon2.abi  wallet.html
src/poseidon/: mod.rs  poseidon4.rs
src/services/: mod.rs  server.rs
src/services/api_services/: deposit.rs  explorer.rs  (+4 more)
src/statics/: Cargo.toml
src/types/: mod.rs  network.rs
static/: insex.html  style.css
(+64 files in other folders)
