[package]
name = "owshen"
version = "0.1.0"
edition = "2021"

[dependencies]
ff = { version = "0.13", features = ["derive", "derive_bits"] }
bindings = { path = "./bindings" }
ethers = { version = "2", default-features = false, features = ["rustls"] }
eyre = "0.6"
tokio = { version = "1.30.0", features = ["macros", "rt", "rt-multi-thread"] }
rand = "0.8"
num-bigint = "0.4"
num-traits = "0.2"
tempfile = "3"
structopt = "0.3"
axum = "0.6.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
home = "0.5.5"
open = "4"
lazy_static = "1.4"
tower-http = { version = "0.4.4", features = ["cors"] }