[package]
name = "owshen"
version = "0.1.4"
edition = "2021"

[dependencies]
ff = { version = "0.13", features = ["derive", "derive_bits"] }
bindings = { path = "./bindings" }
ethers = { version = "2", default-features = false, features = ["rustls"] }
eyre = "0.6"
tokio = { version = "1.30.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
    "signal",
    "fs",
] }
tokio-util = "0.7"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
tempfile = "3"
structopt = "0.3"
axum = "0.6.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
home = "0.5.5"
open = "4"
lazy_static = "1.4"
futures = "0.3"
bip39 = "2.0.0"
webbrowser = "0.6"
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
colored = "2.1.0"
bincode = "1.3.3"
hex = "0.4"
rayon = "1.8.0"
log = "0.4.20"
env_logger = "0.10.1"
reqwest = { version = "0.11.24", features = ["blocking"] }
