[package]
name = "owshen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
alloy = { version = "0.3", features = ["full", "rlp"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
rlp = "0.5.2"
tokio = { version = "1.39.2", features = ["full"] }
rand = "0.8.5"
async-trait = "0.1.81"
ff = { version = "0.13", features = ["derive", "derive_bits"] }
lazy_static = "1.5.0"
num-bigint = "0.4"
num-integer = "0.1"
leveldb = "0.8.6"
db-key = "0.0.5"
axum = "0.6"
hyper = "0.14"
eyre = "0.6.12"
reqwest = "0.12.7"
log = "0.4"
serde_json = "1.0.125"
jsonrpsee = { version = "0.24.3", features = [
    "server",
    "http-client",
    "ws-client",
    "macros",
    "client-ws-transport-tls",
] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tower_http_cors = { package = "tower-http", version = "0.4.4", features = ["full"] }
env_logger = "0.11"
structopt = { version = "0.3", default-features = false }
webbrowser = "0.6"
ethereum-types = "0.14.1"
sha3 = "0.10.8"
hex = "0.4.3"
evm = "0.41"
primitive-types = "0.12"
tinytemplate = "1.2.1"
criterion = "0.5.1"
css-style = "0.14.1"
mime_guess = "2.0.5"
once_cell = "1.19.0"
tracing-subscriber = "0.3.18"
alloy-sol-types = "0.8.3"

